# oxide_control

./: Cargo.toml  README.md  design.md  memo.md
.github/workflows/: CI.yml
examples/acrobot-qtable/: .gitignore  Cargo.toml  MUJOCO_LOG.TXT  acrobot.xml
examples/acrobot-qtable/common/: materials.xml  skybox.xml  visual.xml
examples/acrobot-qtable/logs/07-11-10-11-00/: qtable_2000.json  qtable_4000.json  qtable_6000.json  qtable_8000.json
examples/acrobot-qtable/logs/07-11-10-44-59/: qtable_2000.json  qtable_4000.json
examples/acrobot-qtable/logs/07-11-11-04-20/: qtable_2000.json  qtable_4000.json  qtable_6000.json  qtable_8000.json
examples/acrobot-qtable/src/: lib.rs  main.rs  np.rs
src/: environment.rs  error.rs  lib.rs  mujoco.rs  physics.rs
src/physics/: data.rs  model.rs
