[package]
name = "acrobot-qtable"
version = "0.0.0"
edition = "2024"
authors = ["kanarus <kanarus786@gmail.com>"]

[dependencies]
oxide_control = { path = "../.." }
qtable = { path = "../../../qtable" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
chrono = "0.4"
